# gdpl-spark-tutorial

./: .gitignore  404.html  README.md  _quarto.yml  hello.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_no_ver.txt  sitemap.xml
.github/workflows/: build_and_deploy.yml
docs/: index.md  introduction.md
docs/notebooks/: 00-introduction-and-motivation.ipynb  01-setting-up-apache-spark.md  02-spark-basics-with-pyspark.ipynb  03-interfacing-with-python-libraries.ipynb
introduction/: index.html
notebooks/: 01_spark_setup.qmd  02_spark_architecture.qmd  03_pyspark_integration.qmd  04_pandas_on_spark.qmd  05_sklearn_integration.qmd  06_visualization.qmd  07_statsmodels_integration.qmd  08_advanced_topics.qmd
notebooks/00-introduction-and-motivation/: index.html
notebooks/01-setting-up-apache-spark/: index.html
notebooks/02-spark-basics-with-pyspark/: index.html
notebooks/03-interfacing-with-python-libraries/: index.html
scripts/: install_spark.sh
search/: search_index.json
