[project]
name = "spark-tutorial-wsp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.3",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pyspark>=3.5.3",
    "quarto>=0.1.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "setuptools>=75.6.0",
    "wheel>=0.45.1",
]
